Fixed spacing below news nav floats.
git-svn-id: https://vassalengine.svn.sourceforge.net/svnroot/vassalengine/site-src/trunk@7167 67b53d14-2c14-4ace-a08f-0dab2b34000c

--- a/css/style.css
+++ b/css/style.css
@@ -159,16 +159,16 @@ div.date {
 
 #news-nav {
   clear: both;
-  margin: 0 0 1em 0;
-  padding: 0.5em 0 0 0;
 }
 
 #news-submit {
   float: left;
+  padding-bottom: 10px;
 }
 
 #news-more {
   float: right;
+  padding-bottom: 10px;
 }
 
 div.date:first-line {
